Updated the shared lib & set up microservices env

--- a/.env
+++ b/.env
@@ -3,7 +3,12 @@ RABBITMQ_DEFAULT_PASS=password
 RABBITMQ_USER=user
 RABBITMQ_PASS=password
 RABBITMQ_HOST=rabbitmq:5672
+
 RABBITMQ_AUTH_QUEUE=auth_queue
+RABBITMQ_CERTIFS_QUEUE=certifs_queue
+RABBITMQ_FORMATIONS_QUEUE=formations_queue
+RABBITMQ_TODOLIST_QUEUE=todoList_queue
+
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
