--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
-services: 
-  
+services:
+
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -13,9 +13,9 @@ services:
       - '15672:15672'
     env_file:
       - .env
-  
+
   auth:
-    build: 
+    build:
       context: ./
       dockerfile: ./apps/auth/Dockerfile
     env_file:
@@ -27,9 +27,48 @@ services:
       - .:/usr/src/app #bind mount - any change to base folder should be reflected
       - /usr/src/app/node_modules #anonymous volume - saves data in unkown location
     command: npm run start:dev auth # overrides CMD from dockerfile
-  
+
+  certifs:
+    build:
+      context: ./
+      dockerfile: ./apps/certifs/Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - rabbitmq
+    volumes:
+      - .:/usr/src/app #bind mount - any change to base folder should be reflected
+      - /usr/src/app/node_modules #anonymous volume - saves data in unkown location
+    command: npm run start:dev certifs # overrides CMD from dockerfile
+
+  formations:
+    build:
+      context: ./
+      dockerfile: ./apps/formations/Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - rabbitmq
+    volumes:
+      - .:/usr/src/app #bind mount - any change to base folder should be reflected
+      - /usr/src/app/node_modules #anonymous volume - saves data in unkown location
+    command: npm run start:dev formations # overrides CMD from dockerfile
+
+  todolist:
+    build:
+      context: ./
+      dockerfile: ./apps/todolist/Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - rabbitmq
+    volumes:
+      - .:/usr/src/app #bind mount - any change to base folder should be reflected
+      - /usr/src/app/node_modules #anonymous volume - saves data in unkown location
+    command: npm run start:dev todolist # overrides CMD from dockerfile
+
   api:
-    build: 
+    build:
       context: ./
       dockerfile: ./apps/api/Dockerfile
     ports:
@@ -39,11 +78,14 @@ services:
     depends_on:
       - rabbitmq
       - auth
+      - certifs
+      - formations
+      - todolist
     volumes:
       - .:/usr/src/app #bind mount - any change to base folder should be reflected
       - /usr/src/app/node_modules #anonymous volume - saves data in unkown location
     command: npm run start:dev api # overrides CMD from dockerfile
-  
+
   postgres:
     image: postgres
     env_file:
@@ -52,7 +94,7 @@ services:
       - '5432:5432'
     volumes:
       - ./db/data:/var/lib/postgresql/data
-  
+
   postgres_admin:
     image: dpage/pgadmin4
     depends_on:
