Added hash password method

--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ POSTGRES_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${
 
 PGADMIN_DEFAULT_EMAIL=Eya.ABIDI@rfc.com.tn
 PGADMIN_DEFAULT_PASSWORD=password
+
+JWT_SECRET=secret
