Finished Auth Microservice

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ RABBITMQ_TODOLIST_QUEUE=todoList_queue
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=skillhub
-POSTGRES_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+POSTGRES_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@api-postgres-1:5432/${POSTGRES_DB}
 
 PGADMIN_DEFAULT_EMAIL=Eya.ABIDI@rfc.com.tn
 PGADMIN_DEFAULT_PASSWORD=password
