--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -7,3 +7,10 @@ COPY package*.json .
 RUN npm install
 
 COPY . .
+
+#The following is for k8s
+# Expose the desired port (e.g., 5000)
+EXPOSE 4000
+
+# Command to run the application
+CMD ["npm", "run", "start:dev", "api"]
