--- a/apps/todolist/Dockerfile
+++ b/apps/todolist/Dockerfile
@@ -7,3 +7,7 @@ COPY package*.json .
 RUN npm install
 
 COPY . .
+
+#The following is for k8s
+# Command to run the application
+CMD ["npm", "run", "start:dev", "todolist"]
