Github actions - API GW - TRY 1

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -8,9 +8,7 @@ RUN npm install
 
 COPY . .
 
-#The following is for k8s
-# Expose the desired port (e.g., 5000)
-EXPOSE 4000
-
 # Command to run the application
 CMD ["npm", "run", "start:dev", "api"]
+
+#Triggering commit
