--- a/.github/workflows/api-gw-workflow.yml
+++ b/.github/workflows/api-gw-workflow.yml
@@ -1,43 +1,5 @@
 name: API GW CI/CD Pipeline
 
-env:
-
-#The Resource Group where your resources are deployed
-#required: true
-  RG: "rfc-skillhub-rg"
-
-#The Name of the AKS resource
-#required: true
-  AKSNAME: "rfc-skillhub-kc"
-
-#The Name of the ACR resource
-#required: true
-  ACRNAME: "skillhub"
-
-#The Name of the application
-#required: true
-  APPNAME: "api-gw"
-
-#The Kubernetes Namespace to deploy the Application to
-#required: false
-  NAMESPACE: "default"
-
-#The GitHub App code repo
-#required: false
-  APPREPO: "Eyaiscoding/api"
-
-#The GitHub REF to use when referencing the App code repo
-#required: false
-  APPREPOREF: ""
-
-#The directory in the repo containing the Dockerfile
-#required: false
-  APPREPOPATH: "/api/apps/api"
-
-#A GitHub Environment to pull action secrets from
-#required: true
-  ENVIRONMENT: "skillhub-api"
-
 permissions:
   id-token: write
   contents: read
@@ -47,12 +9,16 @@ on: [push]
 jobs:
   BuildPush:
     runs-on: ubuntu-latest
-    environment: ${{ env.ENVIRONMENT }}
     env:
-      APPNAME: "${{ env.APPNAME }}"
-      ACRNAME: "${{ env.ACRNAME}}"
-      RG: "${{ env.RG }}"
-
+      ENVIRONMENT: "skillhub-api"
+      APPNAME: "api-gw"
+      ACRNAME: "skillhub"
+      RG: "rfc-skillhub-rg"
+      APPREPO: "Eyaiscoding/api"
+      APPREPOREF: ""
+      AKSNAME: "rfc-skillhub-kc"
+      APPREPOPATH: "api/apps/api"
+      
     steps:
       - name: Get application code from repo
         uses: actions/checkout@v2
@@ -97,11 +63,11 @@ jobs:
     environment: ${{ env.ENVIRONMENT }}
     needs: [BuildPush]
     env:
-      APPNAME: "${{ env.APPNAME }}"
-      NAMESP: "${{ env.NAMESPACE }}"
-      AKSNAME: "${{ env.AKSNAME}}"
-      ACRNAME: "${{ env.ACRNAME}}"
-      RG: "${{ env.RG }}"
+      APPNAME: "api-gw"
+      NAMESP: "default"
+      AKSNAME: "rfc-skillhub-kc"
+      ACRNAME: "skillhub"
+      RG: "rfc-skillhub-rg"
 
     steps:
       - name: Get application k8s manifests from repo
@@ -139,10 +105,10 @@ jobs:
       - name: Deploy app to AKS
         uses: azure/k8s-deploy@v1.5
         env:
-          ACRNAME: "${{ env.ACRNAME}}"
+          ACRNAME: "skillhub"
         with:
           manifests: |
-            /api/manifests/api-gw.yml
+            api/manifests/api-gw.yml
           images: |
             ${{ env.ACRNAME }}.azurecr.io/azure:${{ github.sha }}
           namespace: ${{ env.NAMESPACE }}
