--- a/.github/workflows/api-gw-workflow.yml
+++ b/.github/workflows/api-gw-workflow.yml
@@ -53,23 +53,23 @@ on:
 jobs:
   BuildPush:
     runs-on: ubuntu-latest
-    environment: ${{ env.ENVIRONMENT }}
     env:
-      APPNAME: "${{ env.APPNAME }}"
-      ACRNAME: "${{ env.ACRNAME}}"
-      RG: "${{ env.RG }}"
+      environment: $ENVIRONMENT 
+      APPNAME: $APPNAME 
+      ACRNAME: $ACRNAME
+      RG: $RG
 
     steps:
       - name: Get application code from repo
         uses: actions/checkout@v2
         with:
-          repository: ${{ env.APPREPO}}
-          ref: ${{ env.APPREPOREF}}
+          repository: $APPREPO
+          ref: $APPREPOREF
 
       - name: Job parameter inspection
         run: |
-          echo "RG is ${{ env.RG }}"
-          echo "AKS name is ${{ env.AKSNAME }}"
+          echo "RG is $RG"
+          echo "AKS name is $AKSNAME"
 
       - name: Azure Login
         uses: Azure/login@v1.4.3
@@ -86,9 +86,9 @@ jobs:
       - name: ACR build
         id: acrbuild
         env:
-          ACRSERVER: "${{ env.ACRNAME }}.azurecr.io"
-          APPREPOPATH: "${{ env.APPREPOPATH}}"
-          IMAGEREPO: "${{ env.APPNAME }}"
+          ACRSERVER: "$ACRNAME.azurecr.io"
+          APPREPOPATH: $APPREPOPATH
+          IMAGEREPO: $APPNAME 
         run: |
           echo "Verifying directory contents in repo path $APPREPOPATH"
           ls $APPREPOPATH
@@ -100,14 +100,14 @@ jobs:
           az acr build -t $REPOSITORY/$IMAGEREPO:${{ github.sha }} -r $ACRNAME $APPREPOPATH/.
   Deploy:
     runs-on: ubuntu-latest
-    environment: ${{ env.ENVIRONMENT }}
+    environment: $ENVIRONMENT
     needs: [BuildPush]
     env:
-      APPNAME: "${{ env.APPNAME }}"
-      NAMESP: "${{ env.NAMESPACE }}"
-      AKSNAME: "${{ env.AKSNAME}}"
-      ACRNAME: "${{ env.ACRNAME}}"
-      RG: "${{ env.RG }}"
+      APPNAME: $APPNAME
+      NAMESP: $NAMESPACE
+      AKSNAME: $AKSNAME
+      ACRNAME: $ACRNAME
+      RG: $RG 
 
     steps:
       - name: Get application k8s manifests from repo
@@ -128,8 +128,8 @@ jobs:
       - name: Set the target Azure Kubernetes Service (AKS) cluster.
         uses: azure/aks-set-context@v2.0
         with:
-          cluster-name: ${{ env.AKSNAME }}
-          resource-group: ${{ env.RG }}
+          cluster-name: $AKSNAME 
+          resource-group: $RG 
 
       #aks-set-context doesn't do a kubelogin so we add it manually
       - name: Kubelogin
@@ -149,7 +149,7 @@ jobs:
           manifests: |
             ./manifests/api-gw.yml
           images: |
-            ${{ env.ACRNAME }}.azurecr.io/azure:${{ github.sha }}
-          namespace: ${{ env.NAMESPACE }}
+            $ACRNAME.azurecr.io/azure:${{ github.sha }}
+          namespace: $NAMESPACE
           action: deploy
 #Github sha = unique ID of commit
