--- a/.github/workflows/api-gw-workflow.yml
+++ b/.github/workflows/api-gw-workflow.yml
@@ -12,21 +12,21 @@ jobs:
   BuildPush:
     runs-on: ubuntu-latest
     env:
-      APPNAME: "${{ env.APPNAME }}"
-      ACRNAME: "${{ env.ACRNAME}}"
-      RG: "${{ env.RG }}"
-      ENVIRONMENT: "${{ env.ENVIRONMENT }}"
+      APPNAME: "${{ vars.APPNAME }}"
+      ACRNAME: "${{ vars.ACRNAME}}"
+      RG: "${{ vars.RG }}"
+      ENVIRONMENT: "${{ vars.ENVIRONMENT }}"
     steps:
       - name: Get application code from repo
         uses: actions/checkout@v2
         with:
-          repository: ${{ env.APPREPO}}
-          ref: ${{ env.APPREPOREF}}
+          repository: ${{ vars.APPREPO}}
+          ref: ${{ github.ref }}
 
       - name: Job parameter inspection
         run: |
-          echo "RG is ${{ env.RG }}"
-          echo "AKS name is ${{ env.AKSNAME }}"
+          echo "RG is ${{ vars.RG }}"
+          echo "AKS name is ${{ vars.AKSNAME }}"
 
       - name: Azure Login
         uses: Azure/login@v1.4.3
@@ -43,9 +43,9 @@ jobs:
       - name: ACR build
         id: acrbuild
         env:
-          ACRSERVER: "${{ env.ACRNAME }}.azurecr.io"
-          APPREPOPATH: "${{ env.APPREPOPATH}}"
-          IMAGEREPO: "${{ env.APPNAME }}"
+          ACRSERVER: "${{ vars.ACRNAME }}.azurecr.io"
+          APPREPOPATH: "${{ vars.APPREPOPATH}}"
+          IMAGEREPO: "${{ vars.APPNAME }}"
         run: |
           echo "Verifying directory contents in repo path $APPREPOPATH"
           ls $APPREPOPATH
@@ -57,14 +57,14 @@ jobs:
           az acr build -t $REPOSITORY/$IMAGEREPO:${{ github.sha }} -r $ACRNAME $APPREPOPATH/.
   Deploy:
     runs-on: ubuntu-latest
-    environment: ${{ env.ENVIRONMENT }}
+    environment: ${{ vars.ENVIRONMENT }}
     needs: [BuildPush]
     env:
-      APPNAME: "${{ env.APPNAME }}"
-      NAMESP: "${{ env.NAMESPACE }}"
-      AKSNAME: "${{ env.AKSNAME}}"
-      ACRNAME: "${{ env.ACRNAME}}"
-      RG: "${{ env.RG }}"
+      APPNAME: "${{ vars.APPNAME }}"
+      NAMESP: "${{ vars.NAMESPACE }}"
+      AKSNAME: "${{ vars.AKSNAME}}"
+      ACRNAME: "${{ vars.ACRNAME}}"
+      RG: "${{ vars.RG }}"
 
     steps:
       - name: Get application k8s manifests from repo
@@ -85,15 +85,15 @@ jobs:
       - name: Set the target Azure Kubernetes Service (AKS) cluster.
         uses: azure/aks-set-context@v2.0
         with:
-          cluster-name: ${{ env.AKSNAME }}
-          resource-group: ${{ env.RG }}
+          cluster-name: ${{ vars.AKSNAME }}
+          resource-group: ${{ vars.RG }}
 
       #aks-set-context doesn't do a kubelogin so we add it manually
       - name: Kubelogin
         env:
           kubeloginversion: "v0.0.11"
         run: |
-          wget https://github.com/Azure/kubelogin/releases/download/${{ env.kubeloginversion }}/kubelogin-linux-amd64.zip
+          wget https://github.com/Azure/kubelogin/releases/download/${{ vars.kubeloginversion }}/kubelogin-linux-amd64.zip
           unzip kubelogin-linux-amd64.zip
           sudo mv bin/linux_amd64/kubelogin /usr/bin
           kubelogin convert-kubeconfig -l azurecli
@@ -101,12 +101,12 @@ jobs:
       - name: Deploy app to AKS
         uses: azure/k8s-deploy@v1.5
         env:
-          ACRNAME: "${{ env.ACRNAME}}"
+          ACRNAME: "${{ vars.ACRNAME}}"
         with:
           manifests: |
             ./manifests/api-gw.yml
           images: |
-            ${{ env.ACRNAME }}.azurecr.io/azure:${{ github.sha }}
-          namespace: ${{ env.NAMESPACE }}
+            ${{ vars.ACRNAME }}.azurecr.io/azure:${{ github.sha }}
+          namespace: ${{ vars.NAMESPACE }}
           action: deploy
 #Github sha = unique ID of commit"
