--- a/.github/workflows/api-gw-workflow.yml
+++ b/.github/workflows/api-gw-workflow.yml
@@ -29,7 +29,7 @@ jobs:
           echo "AKS name is ${{ vars.AKSNAME }}"
 
       - name: Azure Login
-        uses: Azure/login@v1.4.3
+        uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
