--- a/.github/workflows/api-gw-workflow.yml
+++ b/.github/workflows/api-gw-workflow.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Get application code from repo
         uses: actions/checkout@v2
         with:
-          repository: ${{ vars.APPREPO}}
-          ref: ${{ github.ref }}
+          repository: "${{ vars.APPREPO}}"
+          ref: "${{ github.ref }}"
 
       - name: Job parameter inspection
         run: |
@@ -29,12 +29,13 @@ jobs:
           echo "AKS name is ${{ vars.AKSNAME }}"
 
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v1.6.0
         with:
           auth-type: IDENTITY
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: '${{ secrets.AZURE_CLIENT_ID }}'
+          tenant-id: '${{ secrets.AZURE_TENANT_ID }}'
+          subscription-id: '${{ secrets.AZURE_SUBSCRIPTION_ID }}'
+          enable-AzPSSession: true
 
       - name: Azure CLI script
         uses: azure/CLI@v1
@@ -65,7 +66,7 @@ jobs:
           az acr build -t $REPOSITORY/$IMAGEREPO:${{ github.sha }} -r $ACRNAME $APPREPOPATH/.
   Deploy:
     runs-on: ubuntu-latest
-    environment: ${{ vars.ENVIRONMENT }}
+    environment: "${{ vars.ENVIRONMENT }}"
     needs: [BuildPush]
     env:
       APPNAME: "${{ vars.APPNAME }}"
@@ -79,11 +80,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Azure Login
-        uses: Azure/login@v1.4.3
+        uses: azure/login@v1.6.0
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          auth-type: IDENTITY
+          client-id: '${{ secrets.AZURE_CLIENT_ID }}'
+          tenant-id: '${{ secrets.AZURE_TENANT_ID }}'
+          subscription-id: '${{ secrets.AZURE_SUBSCRIPTION_ID }}'
           enable-AzPSSession: true
 
       - name: Install Kubectl
@@ -94,8 +96,8 @@ jobs:
       - name: Set the target Azure Kubernetes Service (AKS) cluster.
         uses: azure/aks-set-context@v2.0
         with:
-          cluster-name: ${{ vars.AKSNAME }}
-          resource-group: ${{ vars.RG }}
+          cluster-name: "${{ vars.AKSNAME }}"
+          resource-group: "${{ vars.RG }}"
           
 
       #aks-set-context doesn't do a kubelogin so we add it manually
@@ -109,7 +111,7 @@ jobs:
           kubelogin convert-kubeconfig -l azurecli
 
       - name: Deploy app to AKS
-        uses: azure/k8s-deploy@v1.5
+        uses: azure/k8s-deploy@v4.10.0
         env:
           ACRNAME: "${{ vars.ACRNAME}}"
         with:
@@ -117,6 +119,6 @@ jobs:
             ./manifests/api-gw.yml
           images: |
             ${{ vars.ACRNAME }}.azurecr.io/azure:${{ github.sha }}
-          namespace: ${{ vars.NAMESPACE }}
+          namespace: "${{ vars.NAMESPACE }}"
           action: deploy
 #Github sha = unique ID of commit"
