--- a/.github/workflows/api-gw-workflow.yml
+++ b/.github/workflows/api-gw-workflow.yml
@@ -30,7 +30,7 @@ jobs:
           echo "AKS name is ${{ vars.AKSNAME }}"
 
       - name: Azure Login
-        uses: azure/login@v1.4.6
+        uses: azure/login@v1.5.0
         with:
           auth-type: IDENTITY
           client-id: '${{ secrets.AZURE_CLIENT_ID }}'
@@ -81,13 +81,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Azure Login
-        uses: azure/login@v1.4.6
+        uses: azure/login@v1.5.0
         with:
-          #auth-type: IDENTITY
+          auth-type: IDENTITY
           client-id: '${{ secrets.AZURE_CLIENT_ID }}'
           tenant-id: '${{ secrets.AZURE_TENANT_ID }}'
           subscription-id: '${{ secrets.AZURE_SUBSCRIPTION_ID }}'
-          #enable-AzPSSession: true
+          enable-AzPSSession: true
 
       - name: Install Kubectl
         uses: azure/setup-kubectl@v3.0
